Sun Sep 20 15:26:41 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* pixmaps/: use PNG images instead of XPMs.
	* puxmaps/Makefile.am: updated to use PNGs.

Sat Sep 19 19:37:13 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.c (gnome_stock_paint): added gtk_widget_queue_draw
	* gnome-stock.[ch]: added menu versions of the timer icons

Sat Sep 19 17:24:58 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* pixmaps/Makefile.am: removed xpm2rgb which needs a Display.
	use ../../tools/convertrgb/convertrgb to build gnome-stock-imlib.h

Sat Sep 19 12:47:35 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* pixmaps/xpm2rgb.c pixmaps/stock_*.xpm: new files
	* pixmaps/Makefile.am: added generation of gnome-stock-imlib.h
	* gnome-stock.c: include pixmaps/gnome-stock-imlib.h

1998-09-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-popup-menu.c (gnome_popup_menu_new): New public function
	to create a popup menu from a GnomeUIInfo array.
	(gnome_popup_menu_attach): New public function to attach a popup
	menu to a widget -- the popup menu can be called by pressing mouse
	button 3 over the widget.  The menu can be shared between multiple
	widgets and it will be destroyed when the last widget it is
	attached to is destroyed.
	(gnome_popup_menu_do_popup): New public function to explicitly
	popup a menu.

	* gnome-app-helper.c (do_ui_signal_connect): Use
	gtk_signal_connect_full() instead of gtk_signal_connect_interp(),
	since the latter is obsolete (but works anyway...).

	* stock_demo.c: 
	* gnome-stock.c: 
	* gnome-number-entry.c: 
	* gnome-init.c: 
	* gnome-dialog.h: 
	* gnome-dialog.c: 
	* gnome-dentry-edit.c: 
	* gnome-client.c (gnome_client_init): 
	* gnome-calculator.c: 
	* gnome-app.c: 
	* libgnomeui.h: Removed occurrences of #ifdef GTK_HAVE_FEATURES_1_1_0.  
	We require it, anyways.

	* Makefile.am: Moved all the conditional canvas files into the
	main list of sources -- they are always compiled now.
